--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@distube/ytdl-core": "^4.14.4",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
+    "fluent-ffmpeg": "^2.1.3",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
@@ -36,6 +40,7 @@
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
     "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
