--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
+    "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
+    "openai": "^4.70.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
   },
