feat: typeorm, pg, migrations, db entities configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 PORT=PORT
+
+DB_PORT=DB_PORT
+DB_NAME='DB_NAME'
+DB_USERNAME='DB_USERNAME'
+DB_HOST='DB_HOST'
+DB_PASSWORD='DB_PASSWORD'
+
 OPEN_AI_KEY='OPEN_AI_KEY'
 OPEN_AI_ORGANIZATION='OPEN_AI_ORGANIZATION'
 OPEN_AI_PROJECT='OPEN_AI_PROJECT'
