--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "migration:create": "typeorm migration:create ./src/migrations/new-migration",
+    "migration:run": "nest build && npx typeorm-ts-node-commonjs migration:run -d ./src/config/typeorm/data-source.ts",
+    "migration:revert": "nest build && npx typeorm-ts-node-commonjs migration:revert -d ./src/config/typeorm/data-source.ts"
   },
   "engines": {
     "npm": ">=8.0.0",
@@ -29,11 +31,14 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/typeorm": "^10.0.2",
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.70.2",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
