--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "migration:create": "typeorm migration:create ./src/migrations/new-migration",
     "migration:run": "nest build && npx typeorm-ts-node-commonjs migration:run -d ./src/config/typeorm/data-source.ts",
-    "migration:revert": "nest build && npx typeorm-ts-node-commonjs migration:revert -d ./src/config/typeorm/data-source.ts"
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d ./src/config/typeorm/data-source.ts"
   },
   "engines": {
     "npm": ">=8.0.0",
