--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.70.2",
